Update CloudFront invalidation command
Add query option to CloudFront invalidation command.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,8 @@ jobs:
         run: |
           aws cloudfront create-invalidation \
             --distribution-id "$CLOUDFRONT_DISTRIBUTION_ID}" \
-            --paths "/index.html"
+            --paths "/index.html" \
+            -- query 'Invalidation.Id' --output text
 
       - name: Deployment complete
         run: echo "Frontend Deployed Successfully..."
