--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "node dummyTest.js"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@react-oauth/google": "^0.12.1",
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
